# Warehouse-Robotics

./: .gitignore  README.md
dashboard/: dashboard.html  index.html
dashboard/css/: styles.css
dashboard/data/: warehouse_data.js
dashboard/js/: analytics.js  app.js  dashboard.js  settings.js  tasks.js
robot_system/: CMakeLists.txt  package.xml
robot_system/launch/: robot_system_launch.py
robot_system/src/control/: CMakeLists.txt  package.xml  setup.py
robot_system/src/control/control_nodes/: velocity_controller.py
robot_system/src/perception/: CMakeLists.txt  package.xml  setup.py
robot_system/src/perception/perception_nodes/: fiducial_detector.py  localization_node.py
robot_system/src/planning/: CMakeLists.txt  package.xml  setup.py
robot_system/src/planning/planning_nodes/: global_planner.py  lane_change_service.py  local_trajectory.py
robot_system/src/planning/srv/: LaneChange.srv
robot_system/src/sensors/: CMakeLists.txt  package.xml  setup.py
robot_system/src/sensors/sensors_nodes/: camera_node.py  imu_node.py  odom_node.py  range_node.py
worlds/: cupboard_world.world
worlds/models/cupboard/: model.config  model.sdf
worlds/models/intersection/: model.config  model.sdf
worlds/models/robot/: model.config  model.sdf
