<?xml version="1.0"?>
<package format="3">
  <name>robot_system</name>
  <version>0.1.0</version>
  <description>
    Meta-package to bring up all robot_system nodes in Gazebo.
  </description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- build & install system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- allow launch files -->
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

