<?xml version="1.0"?>
<package format="3">
  <name>planning</name>
  <version>0.1.0</version>
  <description>Global and local planning, lane-change service</description>

  <!-- Tell ament that this package ships interface definitions -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool & code generators -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Message/service generators -->
  <depend>rosidl_default_generators</depend>
  <depend>rosidl_default_runtime</depend>

  <!-- ROS interface dependencies -->
  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  
  <!-- Core ROS interface packages used by services -->
  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
</package>
